# Proto-Familiar

./: .gitignore  CLAUDE.md  DEVELOPMENT_ROADMAP.md  Proto-Familiar.command  Proto-Familiar.vbs  README.md  Tome Mechanic.md  User Tenets.md  audience.js  cerebellum.js  contact-baselines.js  content-regate-loop.js  content-regate.js  content-tags.js  crisis-signals.js  day-segments.js  discord-gateway.js  discord-write-log.js  entity-ref.js  event-alerts.js  gcal-attribution.js  gcal-google.js  gcal-projection.js  gcal-source.js  gcal-sync-loop.js  gcal-sync-status.js  graph-vocab.js  guide-chat.js  injection-guard.js  install.bat  install.sh  interest-picker.js  knocks.js  last-activity.js  llm-call.js  local-engine-adapters.js  local-engine-service.js  log-import.js  macros.js  media.js  (+61 more)
phylactery/: .gitignore  README.md  pyproject.toml
phylactery/src/phylactery/: __init__.py  __main__.py  audience.py  backup.py  consolidate.py  content_gate.py  db.py  embed.py  graduation.py  graph.py  identity.py  memory.py  migrate_from_entity_core.py  remember.py  scheduler.py  server.py  snapshot.py
phylactery/tests/: test_audience_recall.py  test_consolidate_prune.py  test_consolidate_sweep.py  test_content_gate_candidates.py  test_content_gate_recall.py  test_content_tag.py  test_distillation.py  test_graduation.py  test_graph_relate.py  test_graph_subgraph.py  test_ids_to_slugs.py  test_memory_backfill.py  test_memory_by_id.py  test_memory_by_subject.py  test_memory_dedup.py  test_memory_dedup_fallback.py  test_memory_provenance.py  test_memory_register.py  test_memory_rekey.py  test_memory_timerange.py  test_migrate_date_key.py  test_migration_graph_status.py  test_remap_audiences.py  test_retrieval_decay.py  test_vec_upsert.py
unruh/: .gitignore  README.md  pyproject.toml  unruh.toml
unruh/src/unruh/: __init__.py  __main__.py  db.py  gcal.py  handoff.py  (+10 more)
unruh/tests/: test_db.py  test_gcal.py  test_handoff.py  test_icalwrite.py  test_intention.py  test_interest.py  test_location.py  test_schedule.py  test_seed.py  test_server.py  test_templates.py  test_temporal_context.py
(+261 files in other folders)
