[project]
name = "phylactery"
version = "0.1.0"
description = "Canonical self-store for Proto-Familiar: identity, memory, graph — original design by Zari Lewis (Psycheros)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
    "httpx>=0.27.0",
    "cryptography>=42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phylactery"]

[project.scripts]
phylactery = "phylactery.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
