[project]
name = "unruh"
version = "0.0.1"
description = "Temporal-context cognitive module for Proto-Familiar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    # IANA tz database for zoneinfo — required on Windows (no system zoneinfo)
    # so ward-local time conversion applies DST correctly (see db._local_zone).
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unruh"]

[project.scripts]
unruh = "unruh.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
